# image-classifier

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  setup.py
api/: main.py  schemas.py
api/routes/: health.py  predict.py
configs/: model_config.yaml  training_config.yaml
scripts/: evaluate.py  export_model.py  train.py
src/: __init__.py
src/data/: dataloader.py  dataset.py  transforms.py
src/evaluation/: evaluator.py  metrics.py
src/inference/: batch_inference.py  predictor.py
src/models/: architectures.py  factory.py
src/training/: callbacks.py  scheduler.py  trainer.py
src/utils/: helpers.py  logger.py
tests/: test_api.py  test_data.py  test_inference.py  test_model.py  test_training.py
